# ai-cli-session-db

./: .gitignore  Cargo.toml  FFI_USAGE.md  HOOK_EVENT_PLAN.md  README.md  build.rs  build.sh
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG_sequence_fix.md  USAGE_sequence_fix.md
examples/: repair_projects.rs  test_reader.rs
include/: ai_cli_session_db.h  claude_session_db.h
scripts/: update_downstream.sh
src/: collector.rs  config.rs  coordination.rs  db.rs  error.rs  ffi.rs  lib.rs  migrations.rs  protocol.rs  reader.rs  repair.rs  schema.rs  search.rs  types.rs  writer.rs
src/agent/: broadcaster.rs  handler.rs  mod.rs  server.rs  watcher.rs
src/client/: connect.rs  ffi.rs  mod.rs
src/sync/: client.rs  db.rs  filter.rs  mod.rs  stream.rs  worker.rs
tests/: agent_tests.rs  client_tests.rs  integration_tests.rs
