[package]
name = "ai-cli-session-db"
version = "0.0.1-beta.1"
edition = "2021"
description = "Shared database library for AI CLI session management with Agent architecture"
license = "MIT"

[lib]
name = "ai_cli_session_db"
crate-type = ["rlib", "cdylib"]

[features]
default = ["writer", "reader", "search"]
writer = []           # 写入能力
reader = []           # 只读能力
search = ["fts"]      # 搜索能力
fts = []              # FTS5 支持
ffi = []              # C FFI 导出 (Swift 绑定用)
agent = ["writer", "search", "sync", "dep:notify", "dep:notify-debouncer-mini"]  # Agent 模式（唯一 Writer + 文件监听 + 事件推送）
client = []           # Agent Client（供组件使用）
sync = ["dep:aho-corasick", "dep:globset", "dep:reqwest", "dep:shellexpand", "dep:tokio-tungstenite", "dep:futures-util", "dep:rustls", "dep:rustls-pemfile"]  # 同步模块（push to server）

[dependencies]
# 数据库
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }

# AI 会话收集 (JSONL 解析)
# 使用 git 依赖，支持独立编译；在 ETerm 主仓库中通过 [patch] 覆盖成本地路径
ai-cli-session-collector = { git = "https://github.com/vimo-ai/ai-cli-session-collector" }

# 异步运行时
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread", "net", "io-util", "macros", "fs", "signal"] }

# 文件监听（Agent 用）
notify = { version = "7", optional = true }
notify-debouncer-mini = { version = "0.5", optional = true }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 工具
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
parking_lot = "0.12"
native-tls = "0.2"

# 跨平台支持
interprocess = { version = "2.2", features = ["tokio"] }  # IPC: Unix Socket / Named Pipe
sysinfo = "0.32"                                           # 进程检测
file-id = "0.2"                                            # 文件标识 (inode/file_index)

# 同步模块（可选）
aho-corasick = { version = "1", optional = true }          # 敏感词多模式匹配
globset = { version = "0.4", optional = true }             # 项目白名单 glob
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls-manual-roots"], default-features = false, optional = true }  # HTTP client
shellexpand = { version = "3", optional = true }           # ~ 路径展开
tokio-tungstenite = { version = "0.26", features = ["__rustls-tls"], optional = true }  # WebSocket client
futures-util = { version = "0.3", optional = true }         # WebSocket stream/sink traits
rustls = { version = "0.23", optional = true }              # TLS for WebSocket
rustls-pemfile = { version = "2", optional = true }         # CA cert PEM parsing

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "migrate_archive"
path = "src/bin/migrate_archive.rs"

[[bin]]
name = "vimo-agent"
path = "src/bin/vimo_agent.rs"
required-features = ["agent"]

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
